Fix z-index of the navmenu

--- a/components/NavMenu.css
+++ b/components/NavMenu.css
@@ -6,6 +6,7 @@
     position: fixed;
     transition: background-color .24s ease;
     box-shadow: none;
+    z-index: 1;
 }
 
 .navbar {
